--- a/vagrant_getting_started/Vagrantfile
+++ b/vagrant_getting_started/Vagrantfile
@@ -1,47 +1,30 @@
 Vagrant.configure("2") do |config|
-  # Server configuration
-  config.vm.define "rgeralS" do |node|
-    node.vm.box = "bento/debian-12"  # Latest stable version of Ubuntu as of writing
-    node.vm.hostname = "rgeralS"
-    node.vm.network "private_network", ip: "192.168.56.110"
-    node.vm.provider "virtualbox" do |vb|
-      vb.memory = 512
-      vb.cpus = 1
-    end
-    node.vm.provision "shell", inline: <<-SHELL
-      # Update and install necessary packages
-      sudo apt-get update
-      sudo apt-get install -y apt-transport-https curl
-
-      # Install K3s in controller mode
-      curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--node-name=#{node.vm.hostname} --flannel-backend=none" sh -
-
-      # Allow SSH login with no password
-      sudo sed -i 's/PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config
-      sudo systemctl restart ssh
-    SHELL
+  config.vm.box = "bento/debian-12"
+  
+  config.vm.provider "virtualbox" do |v|
+    v.memory = 1024
+    v.cpus = 1
   end
 
-  # ServerWorker configuration
-  config.vm.define "rgeralSW" do |node|
-    node.vm.box = "bento/debian-12"  # Latest stable version of Ubuntu as of writing
-    node.vm.hostname = "rgeralSW"
-    node.vm.network "private_network", ip: "192.168.56.111"
-    node.vm.provider "virtualbox" do |vb|
-      vb.memory = 512
-      vb.cpus = 1
+  config.vm.define "rgeralS" do |master|
+    master.vm.hostname = "rgeralS"
+    master.vm.network :private_network, ip: "192.168.56.110"
+    master.vm.synced_folder ".", "/vagrant", type: "virtualbox"
+    master.vm.provision "shell", privileged: true, path: "scripts/k3s_master.sh", args: ["192.168.56.110"]
+
+    master.vm.provider "virtualbox" do |v|
+      v.name = "rgeralS"
     end
-    node.vm.provision "shell", inline: <<-SHELL
-      # Update and install necessary packages
-      sudo apt-get update
-      sudo apt-get install -y apt-transport-https curl
+  end
 
-      # Install K3s in agent mode
-      curl -sfL https://get.k3s.io | K3S_URL="https://192.168.56.110:6443" K3S_TOKEN="your_token" sh -
+  config.vm.define "rgeralSW" do |worker|
+    worker.vm.hostname = "rgeralSW"
+    worker.vm.network :private_network, ip: "192.168.56.111" 
+    worker.vm.synced_folder ".", "/vagrant", type: "virtualbox"
+    worker.vm.provision "shell", privileged: true, path: "scripts/k3s_worker.sh", args: ["192.168.56.110", "192.168.56.111"]
 
-      # Allow SSH login with no password
-      sudo sed -i 's/PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config
-      sudo systemctl restart ssh
-    SHELL
+    worker.vm.provider "virtualbox" do |v|
+      v.name = "rgeralSW"
+    end
   end
 end
