--- a/vagrant_getting_started/Vagrantfile
+++ b/vagrant_getting_started/Vagrantfile
@@ -10,7 +10,7 @@ Vagrant.configure("2") do |config|
     master.vm.hostname = "rgeralS"
     master.vm.network :private_network, ip: "192.168.56.110"
     master.vm.synced_folder ".", "/vagrant", type: "virtualbox"
-    master.vm.provision "shell", privileged: true, path: "scripts/k3s_master.sh", args: ["192.168.56.110"]
+    master.vm.provision "shell", path: "scripts/k3s_master.sh", args: ["192.168.56.110"]
 
     master.vm.provider "virtualbox" do |v|
       v.name = "rgeralS"
@@ -21,7 +21,7 @@ Vagrant.configure("2") do |config|
     worker.vm.hostname = "rgeralSW"
     worker.vm.network :private_network, ip: "192.168.56.111" 
     worker.vm.synced_folder ".", "/vagrant", type: "virtualbox"
-    worker.vm.provision "shell", privileged: true, path: "scripts/k3s_worker.sh", args: ["192.168.56.110", "192.168.56.111"]
+    worker.vm.provision "shell", path: "scripts/k3s_worker.sh", args: ["192.168.56.110", "192.168.56.111"]
 
     worker.vm.provider "virtualbox" do |v|
       v.name = "rgeralSW"
