--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,30 +1,32 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "bento/debian-12"
+    username = `whoami`.strip
+    config.vm.synced_folder "./confs", "/vagrant_shared"
   
-  config.vm.provider "virtualbox" do |v|
-    v.memory = 1024
-    v.cpus = 1
-  end
-
-  config.vm.define "rgeralS" do |master|
-    master.vm.hostname = "rgeralS"
-    master.vm.network :private_network, ip: "192.168.56.110"
-    master.vm.synced_folder ".", "/vagrant", type: "virtualbox"
-    master.vm.provision "shell", path: "scripts/k3s_master.sh", args: ["192.168.56.110"]
-
-    master.vm.provider "virtualbox" do |v|
-      v.name = "rgeralS"
+    config.vm.provider "virtualbox" do |vb|
+      vb.memory = 1024
+      vb.cpus = 2
+    end
+  
+    config.vm.define "#{username}S" do |server|
+      server.vm.hostname = "#{username}S"
+      server.vm.provider "virtualbox" do |vb|
+        vb.name = "#{username}S"
+      end
+  
+      server.vm.box = "bento/debian-12"
+      server.vm.network "private_network", ip: "192.168.56.110"
+      server.vm.provision "shell", path: "./scripts/server.sh", args: ['192.168.56.110']
+    end
+  
+    config.vm.define "#{username}SW" do |worker|
+      worker.vm.hostname = "#{username}SW"
+      worker.vm.provider "virtualbox" do |vb|
+        vb.name = "#{username}SW"
+      end
+  
+      worker.vm.box = "bento/debian-12"
+      worker.vm.network "private_network", ip: "192.168.56.111"
+      worker.vm.provision "shell", path: "./scripts/agent.sh", args: ['192.168.56.110']
     end
   end
-
-  config.vm.define "rgeralSW" do |worker|
-    worker.vm.hostname = "rgeralSW"
-    worker.vm.network :private_network, ip: "192.168.56.111" 
-    worker.vm.synced_folder ".", "/vagrant", type: "virtualbox"
-    worker.vm.provision "shell", path: "scripts/k3s_worker.sh", args: ["192.168.56.110", "192.168.56.111"]
-
-    worker.vm.provider "virtualbox" do |v|
-      v.name = "rgeralSW"
-    end
-  end
-end
+  
